am trecut la ImmutalbeList(guava) corectand astfel o greseala istorica a Java (colectii mutabile)